# ufsj_db_tp2

./: .gitignore  Makefile  README.md  crawler.py  google_places_categories.py  pyproject.toml  readme.md  services.py
tp2/: settings.py  urls.py
v1/migrations/: 0001_initial.py  0002_estabelecimento.py  0003_comentario.py  0004_resposta.py  0005_resumo_de_avaliacoes.py  0006_tag.py  0007_estabelecimento_tag.py
v1/models/: comentario.py  estabelecimento.py  estabelecimento_tag.py  resposta.py  resumo_de_avaliacoes.py  tag.py
v1/serializers/: comentario_serializers.py  estabelecimento_serializers.py  estabelecimento_tag_serializers.py  resposta_serializers.py  resumo_de_avaliacoes_serializers.py  tag_serializers.py
v1/services/: request_services.py  string_services.py
v1/tasks/: crawler.py
v1/utils/: cities.py  google_places_categories.py
v1/views/: __init__.py  comentario_views.py  estabelecimento_tag_views.py  estabelecimento_views.py  resposta_views.py  resumo_de_avaliacoes_views.py  tag_views.py
