[project]
name = "tp2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "mysql-connector-python>=9.3.0",
    "ruff>=0.11.7",
    "selenium>=4.31.0",
]
